--- a/front-end/assets/translations/en.csv
+++ b/front-end/assets/translations/en.csv
@@ -138,8 +138,8 @@ cron:month,Month
 cron:second,Second
 cron:week,Day of the week
 dashboard:back_to_dashboard,Back to dashboard
-equipment:chart:barchart,Equipment(Bar Chart)
-equipment:chart:ctrlpanel,Equipment(Control Panel)
+equipment:chart:barchart,Equipment (Bar Chart)
+equipment:chart:ctrlpanel,Equipment (Switch Panel)
 fatal_error:connection_lost,Connection Lost
 fatal_error:fatal_error,Fatal Error
 fatal_error:message,Something went wrong and the UI cannot contact the server anymore. You may need to restart the webserver or do some troubleshooting.
@@ -274,3 +274,4 @@ timers:turn_off,Turn Off
 timers:turn_on,Turn On
 timers:type_required,Type is required
 timers:validation_error,The Timer settings cannot be saved due to validation errors.  Please correct the errors and try again.
+useasjack, Jack
